fix play button iPhone issue

--- a/process/sass/modules/_controls.scss
+++ b/process/sass/modules/_controls.scss
@@ -2,6 +2,7 @@
   margin: $border-radius;
   text-align: center;
   width: 100%;
+  font-family: Helvetica;
   .ap-navigation {
     margin-left: auto;
     margin-right: auto;
@@ -9,6 +10,7 @@
     display: inline;
     .ap-togglePlay, .ap-back10, .ap-skip10 {
       @include btn();
+      height: 27px;
     }
   }
 }
